# glassbox

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  mutmut_config.py  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  CAPTURE.md  DATA_MODEL.md  DEPENDENCY_GRAPH.md  EVALUATION.md  GLASSBOX_IR.md  PHILOSOPHY.md  PLUGINS.md  ROADMAP.md  STORAGE.md  VISION.md  glassbox-architecture-rfc.md
examples/: openai_chat.py
glassbox/: __init__.py  __main__.py  cli.py
glassbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
glassbox/capture/: __init__.py  collector.py  http.py  recorder.py  transport.py
glassbox/cli/: __init__.py
glassbox/core/: __init__.py  artifact.py  bus.py  execution.py  identity.py  observation.py  relations.py  session.py
glassbox/demo/: __init__.py  engine.py
glassbox/evaluation/: __init__.py  diff.py  runner.py  scorer.py
glassbox/events/: __init__.py  demo.py  models.py
glassbox/insights/: rules.py  session_analyzer.py
glassbox/intercept/: __init__.py
glassbox/ir/: __init__.py  artifact.py  edge.py  execution.py  identity.py  node.py  observation.py  profile.py  transform.py
glassbox/ir/profiles/: __init__.py  http.py
glassbox/providers/: __init__.py  _passthrough.py  anthropic.py  azure_openai.py  base.py  gemini.py  manager.py  ollama.py  openai.py  openrouter.py
glassbox/sdk/: __init__.py  api.py  decorators.py
glassbox/semantics/: __init__.py  interpreter.py
glassbox/semantics/profiles/: __init__.py  genai.py  http.py  mcp.py
glassbox/storage/: __init__.py  blobs.py  datasets.py  metadata.py
glassbox/tracing/: __init__.py  builder.py  bus.py  generator.py  trace.py
glassbox/tui/: __init__.py  app.py  glassbox.tcss  screens.py  widgets.py
mutants/: mutmut-stats.json  pyproject.toml
mutants/glassbox/: __init__.py  cli.py
mutants/glassbox/core/: bus.py
mutants/glassbox/events/: __init__.py  demo.py  models.py
mutants/glassbox/insights/: __init__.py  analyzer.py  models.py  session_rules.py
mutants/glassbox/intercept/: __init__.py  openai.py
mutants/glassbox/providers/: anthropic.py  azure_openai.py  gemini.py  manager.py  ollama.py  openai.py  openrouter.py  registry.py
mutants/glassbox/tracing/: __init__.py  builder.py  bus.py  generator.py  trace.py
mutants/glassbox/tui/: app.py  screens.py
mutants/tests/: conftest.py  test_cli.py  test_event_bus.py  test_events_demo.py  test_inspector_insights_ui.py  test_openai_interceptor.py  test_provider_registry.py  test_trace_builder.py  test_trace_stress.py
rfcs/: RFC-0001-core.md  RFC-0002-capture.md  RFC-0003-identity.md
tests/: conftest.py  test_architecture_dependencies.py  test_benchmarks.py  test_cli.py  test_demo_engine.py  test_demo_trace_source.py  test_insights.py  test_ir.py  test_openai_interceptor.py  test_openai_interceptor_edge_cases.py  test_packaging.py  test_provider_registry.py  test_readme_examples.py  test_session_summary_ui.py  test_trace_model.py  test_tui_constructors.py
