[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glassbox"
version = "0.1.0"
description = "DevTools for LLM Applications"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "textual>=0.70.0",
    "rich>=13.7.0",
    "typer>=0.12.3",
    "pydantic>=2.7.0",
]

[project.scripts]
glassbox = "glassbox.cli:app"

[tool.setuptools]
license-files = []