[build-system]
requires = ["setuptools<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glassboxcli"
version = "0.1.0"
description = "DevTools for LLM Applications"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT"}
dependencies = [
    "textual>=0.70.0",
    "rich>=13.7.0",
    "typer>=0.12.3",
    "pydantic>=2.7.0",
]

[project.scripts]
glassbox = "glassbox.cli:app"

[tool.setuptools]
include-package-data = true
packages = ["glassbox", "glassbox.events", "glassbox.intercept", "glassbox.providers", "glassbox.storage", "glassbox.tracing", "glassbox.tui"]

[project.urls]
Homepage = "https://github.com/kavya5cloud/glassbox"
Repository = "https://github.com/kavya5cloud/glassbox"
Issues = "https://github.com/kavya5cloud/glassbox/issues"
Documentation = "https://github.com/kavya5cloud/glassbox#readme"